examples/cert-manager/selfsigned/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: kube-prometheus-stack-ingress-prometheus
  namespace: monitoring
spec:
  tls:
  - hosts:
    - prometheus.homelab.com
    secretName: prometheus-tls-secret
  rules:
  - host: prometheus.homelab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: prometheus-operated
            port: 
              number: 9090
